Imported from https://maczech@github.com/maczech/flume.git

--- a/project.config
+++ b/project.config
@@ -1,4 +1,23 @@
 [access]
 	inheritFrom = All-Projects
 [submit]
-	action = inherit
+[project]
+	description = WE HAVE MOVED to Apache Incubator. https://cwiki.apache.org/FLUME/ .   Flume is a distributed, reliable, and available service for efficiently collecting, aggregating, and moving large amounts of log data. It has a simple and flexible architecture based on streaming data flows. It is robust and fault tolerant with tunable reliability mechanisms and many failover and recovery mechanisms. The system is centrally managed and allows for intelligent dynamic management. It uses a simple extensible data model that allows for online analytic applications.
+[access "refs/*"]
+	owner = group user/Marcin Czech (maczech)
+[access "refs/for/refs/*"]
+	label-Code-Review = -2..+2 group user/Marcin Czech (maczech)
+	label-Verified = -1..+1 group user/Marcin Czech (maczech)
+	push = group user/Marcin Czech (maczech)
+	read = group user/Marcin Czech (maczech)
+	rebase = group user/Marcin Czech (maczech)
+	removeReviewer = group user/Marcin Czech (maczech)
+	submit = group user/Marcin Czech (maczech)
+[access "refs/heads/*"]
+	create = group user/Marcin Czech (maczech)
+	push = +force group user/Marcin Czech (maczech)
+	pushMerge = group user/Marcin Czech (maczech)
+	read = group user/Marcin Czech (maczech)
+[access "refs/tags/*"]
+	push = group user/Marcin Czech (maczech)
+	push = +force group user/Marcin Czech (maczech)
